syntax = "proto3";

message file_request{
    string file = 1;
}

message file_response{
	string file = 1;
}

service Monedas{
	rpc Find_file(file_request) returns (file_response);
    rpc List_file(file_request) returns (file_response);
}